--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
-deploy:
-  provider: heroku
-  api_key: foo
-  run:
-    - version
-    - restart
+sudo: required
+
+before_script:
+  - wget -qO- https://toolbelt.heroku.com/install.sh | sh
+
+script:
+  - /usr/local/heroku/bin/heroku version
+  - /usr/local/heroku/bin/heroku restart --app my-heroku-app-name # requires HEROKU_API_KEY env variable
